<resources>
  <string name="app_name">Sunnah Assistant</string>
  <string name="next_string">Next:</string>
  <string name="done_for_the_day">It\'s Empty Here</string>
  <string name="switch_to_dark_mode">Switch To Dark Mode</string>
  <string name="reminder_name_label">Name</string>
  <string name="reminder_name_hint">Enter The Name of The Reminder</string>
  <string name="edit_reminder">Edit Reminder</string>
  <string name="add_reminder">Add Reminder</string>
  <string name="reminder_category">Category</string>
  <string-array name="frequency">
    <item>No Repeat</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
    </string-array>
  <string name="pick_time">Pick Time</string>
  <string name="change_time">Change Time</string>
  <string name="save">Save</string>
  <string name="successfully_updated">Successfully Updated</string>
  <string name="no_changes">No Changes Made.</string>
  <string name="name_cannot_be_empty">Name Cannot Be Empty</string>
  <string name="select_days">Days</string>
  <string name="select_atleast_one_day">Select at least One Day</string>
  <string name="more_details">More Details</string>
  <string name="enter_additional_details">Enter Additional Details</string>
    <string name="settings">Settings</string>
    <string name="hijri_date_settings">Hijri Date Settings</string>
    <string name="prayer_time_settings">Prayer Time Settings</string>
    <string name="enter_city_town_name">City/Town name + Country</string>
    <string name="city_name_example">*Example:London, United Kingdom</string>
    <string name="location_hint">Enter Location</string>
    <string name="error_updating_location">Error updating Location. Please check your internet connection</string>
    <string name="prayer_time_calculation_method">Calculation Method:</string>
    <string-array name="asr_juristic_method">
        <item>Standard(Hanbali, Shafi, Maliki)</item>
        <item>Hanafi</item>
    </string-array>
  <string name="change_prayer_time_offset_by">Notify (+/- minutes from prayer time)</string>
    <string name="prayer_offset_minute">minute(s)</string>
    <string name="value">Value</string>
    <string name="add_prayer_time">Activate automatic Salah(Prayer) time alerts</string>
    <string name="welcome">Welcome to Sunnah Assistant:</string>
    <string name="tagline">Set Reminders that will help you become a better Muslim</string>
    <string name="quick_setup">Get Started</string>
    <string name="delete_reminder">Reminder Deleted</string>
    <string name="undo_delete">Undo</string>
    <string name="cannot_delete_prayer_time">Automatic Prayer Reminders can only be deleted from Settings</string>
    <string name="time_not_set">Time not Set</string>
    <string name="general_settings">General Settings</string>
    <string name="next_reminder_notification">Display The Next Reminder Notification</string>
    <string name="next_reminder_disclaimer">Disabling this might lead to reminders not being triggered successfully</string>
    <string name="about_app">About App</string>
    <string name="version">Version: %s</string>
    <string name="icon">app icon</string>
    <string name="credits">Credits</string>
    <string name="about">
        Is a Free and &lt;a href=https://github.com/saidmsaid81/SunnahAssistant/>Open Source&lt;/a> app&lt;br>
        Developed By Said Muhammad (&lt;a href=https://twitter.com/saidmsaid81/>@saidmsaid81&lt;/a>)
    </string>
    <string name="app_icon_credit">Icons from: &lt;a href=https://www.flaticon.com/authors/freepik/>https://www.flaticon.com/authors/freepik&lt;/a> </string>
    <string name="we_are_social">Join Us on Social Media</string>
    <string name="facebook_logo">Facebook logo</string>
    <string name="no_email_app_installed">No Email App Installed</string>
    <string name="contact_us">Contact Us via E-mail</string>
    <string name="change_theme">Tap to Change Theme or Layout</string>
    <string name="change_theme_description">Themes:- Dark Theme or Light Theme\nLayout:- Expanded or Condensed</string>
    <string name="add_new_reminder">Add Reminder</string>
    <string name="add_new_reminder_description">Tap To add any Reminder</string>
    <string name="edit_reminder_description">~ Swipe Right or Left to delete Reminder\n~ Tap To edit Reminder\n~ Tap the bell icon (if time is set) to enable reminder</string>
    <string name="spinner_tutorial">Reminders Switcher</string>
    <string name="spinner_tutorial_description">Switch between today, tomorrow, weekly and monthly reminders</string>
    <string name="support_developer">Support Developer</string>
    <string name="more_apps">More Apps</string>
    <string name="rate_this_app">Rate this App</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="telegram_logo">Telegram Logo</string>
    <string name="instagram_logo">Instagram Logo</string>
    <string name="twitter_logo">Twitter Logo</string>
    <string name="tap_the_icon_at_the_bottom_corner_to_add_a_new_reminder">Tap the + icon at the bottom corner to add a new reminder</string>
    <string name="open_source_licenses">Open Source Licenses</string>
    <string name="name_of_the_new_category">Name of the New Category</string>
    <string name="cancel">Cancel</string>
    <string name="display_all">All</string>
    <string name="alternate_display_of_data">Switch to Condensed View</string>
    <string name="default_display_of_data">Switch to Expanded View</string>
    <string name="display_hijri_date_on_the_home_page">Display Hijri Date on the home page</string>
    <string name="updating">Updating…</string>
    <string name="unavailable_location">Couldn\'t find this location. Please enter another location</string>
    <string name="location_cannot_be_empty">Location cannot be empty</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="notification_tone">Notification Tone</string>
    <string name="vibrate">Vibrate</string>
    <string name="importance">Behavior</string>
    <string name="next_reminder_sticky_notification">Next Reminder Sticky Notification</string>
    <string name="layout_and_theme_settings">Layout and Theme Settings</string>
    <string name="privacy_settings">Privacy Settings</string>
    <string name="layout">Layout</string>
    <string name="theme">Theme</string>
    <string name="theme_in_android_10_follows_system_settings">Follows System</string>
    <string name="delete_category">Delete Category?</string>
    <string name="confirm_delete_category">%s Category Deleted</string>
    <string name="category_cannot_be_deleted">%s Category cannot be deleted</string>
    <string name="customize_categories">Customize Categories</string>
    <string name="filter_displayed_reminders">Filter Displayed Reminders</string>
    <string name="filter_displayed_reminders_description">Such as display all categories or only one category</string>
    <string name="add_sunnah_reminders_alerts_such_as_fasting_on_mondays_and_thursdays">Tap to add Sunnah Reminders alerts</string>
    <string name="sunnah_reminder_alerts_description">*such as Fasting on Mondays and Thursdays</string>
    <string name="add_salah_prayer_time_alerts">Tap to add Salah (Prayer) time alerts</string>
    <string name="pick_date_and_time">Pick Date and Time</string>
  <string name="please_pick_date_and_time">Please Pick Date and time</string>
  <string name="higher_latitude_adjustment_method">Higher Latitude Adjustment Method</string>
  <string name="add_widget">Add widget</string>
  <string name="display_hijri_date">Display Hijri Date</string>
  <string name="display_the_next_reminder">Display the Next Reminder</string>
  <string name="enable_at_least_one_option">Enable at least one option</string>
  <string name="setup_widget">Setup Widget</string>
  <string name="today_s_reminder">Today\'s Reminders</string>
  <string name="hijri_date_is_based_on_umm_al_qura_calendar_read_more_on_umm_al_qura_calendar_here_http_www_ummulqura_org_sa_default_aspx">Hijri Date used in this app is based on Umm al-Qura Calendar. Read more on Umm al-Qura Calendar here http://www.ummulqura.org.sa/default.aspx</string>
  <string name="read_more">Read more</string>
  <string name="read_more_on_dhuha_prayer">
      Tap to read more on Duha Prayer, its time and  number of rakaahs
    </string>
  <string name="read_more_on_tahajjud_prayer">Tap to read more on Tahajjud prayer, its time and number of rakaahs</string>
  <string name="read_more_on_suratul_kahf">Tap to read more on the importance of reading Suratul Kahf every Friday</string>
  <string name="read_more_on_fasting_mondays_and_thursdays">Tap to read more on the importance of fasting on Mondays and Thursday</string>
  <string name="what_s_new">What\'s New</string>
  <string name="create_new_categories">Create New Category</string>
  <string name="important">Important</string>
  <string name="important_changes"></string>
  <string name="new_features">New Features</string>
  <string name="new_features_details">
        ‣ Added partial indonesian translations.\n
        ‣ Help us translate the app to your language by tapping \"Help Translate App\" button below. Thank you.
    </string>
  <string name="updated">Updated</string>
    <string name="updated_details">
        ‣ Updated and optimized all widgets.
    </string>
  <string name="fixes">Fixes</string>
  <string name="fixes_details">
        ‣ Fixed bug that persisted prayer time alerts even when automatic prayer time alerts are disabled\n
        ‣ Fixed crash on some devices when scheduling reminders \n
        ‣ Minor bug fixes and improvements
    </string>
  <string name="add_or_delete_categories">Add or Delete Categories</string>
  <string name="successfuly_added_sunnah_reminders">Successfully Added</string>
  <string name="sticky_notification_description">Sticky Notification to display the next scheduled reminder</string>
  <string name="dhuha_prayer">Praying Dhuha</string>
  <string name="morning_adhkar">Morning Adhkar</string>
  <string name="evening_adhkar">Evening Adhkar</string>
  <string name="tahajjud">Tahajjud</string>
  <string name="reading_the_quran">Reading the Quran</string>
  <string name="reading_suratul_kahf">Reading Suratul Kahf</string>
  <string name="fasting_on_monday_and_thursday">Fasting On Monday And Thursday</string>
  <string name="demo_reminder">Demo Reminder</string>
  <string name="tomorrow_at">Tomorrow at&#160;</string>
  <string name="today_at">Today at&#160;</string>
  <string name="daily">Daily&#160;</string>
  <string name="monthly_frequency_display">On %s every month</string>
  <string name="one_time_frequency_display">On %s</string>
  <string name="at_time_example_at_9_pm">%s&#160;</string>
  <string name="expanded_view">Expanded View</string>
  <string name="condesed_view">Condensed View</string>
  <string name="on">On</string>
  <string name="off">Off</string>
  <string name="prayer">Prayer</string>
  <string name="add_new_category">Add New Category</string>
  <string name="hijri_date"><![CDATA[<b>Today\'s Date:</b> %s]]></string>
  <string name="weekly_frequency_display_example_2_days_every_week">%d days Every Week</string>
  <string name="tap_to_disable_sticky_notification">Tap to disable this Sticky Notification</string>
  <string name="no_upcoming_reminder_today">No Upcoming Reminder Today</string>
  <string name="tomorrow_at_notification">. Tomorrow at </string>
  <string name="by_continuing_to_use_this_app_you_agree_to_this_site_privacy_policy">By continuing to use this app, you agree to this app\'s privacy policy</string>
  <string name="read_privacy_policy">Privacy Policy</string>
  <string name="share_app">Share App</string>
  <string name="help_translate_app_button">Help Translate App</string>
  <string name="reminder_on">Reminder: On</string>
  <string name="reminder_off">Reminder: Off</string>
  <string name="repeating_reminder">Repeating reminder</string>
</resources>