<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

  <data>
    <import type="android.view.View" />
    <variable
        name="settings"
        type="com.thesunnahrevival.common.data.model.AppSettings"
        />

  </data>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:padding="@dimen/default_dimen"
      android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/privacy_settings"
        android:textColor="@color/colorAccent"
        />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/collect_data_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/default_dimen"
        android:button="@null"
        android:checked="@{settings.shareAnonymousUsageData}" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/default_dimen"
        android:textSize="12sp"
        android:drawablePadding="@dimen/default_dimen"
        android:text="@string/by_continuing_to_use_this_app_you_agree_to_this_site_privacy_policy"
        app:drawableStartCompat="@drawable/ic_info"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/read_privacy_policy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="@dimen/margin_dimen"
        android:textAllCaps="false"
        app:backgroundTint="@color/fabColor"
        android:textColor="@android:color/white"
        android:text="@string/read_privacy_policy" />



  </LinearLayout>
</layout>