<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.content.Context" />

        <import type="android.view.View" />

        <import type="com.thesunnahrevival.common.utilities.TimeDateUtil" />

        <variable
            name="reminder"
            type="com.thesunnahrevival.common.data.model.Reminder" />
    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="@dimen/default_dimen"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/mark_as_complete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/default_dimen"
                android:layout_marginStart="@dimen/default_dimen"
                android:checked="@{reminder.complete}"
                android:layout_gravity="center" />

            <LinearLayout
                android:id="@+id/card_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/default_dimen"
                android:paddingBottom="@dimen/default_dimen"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/reminder_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@{reminder.reminderName}"
                    android:enabled="@{!reminder.complete}"
                    android:textAppearance="@android:style/TextAppearance.Material.Title"
                    android:textSize="@dimen/default_text_size"
                    tools:text="Fasting Ayyamul Beidh" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/reminder_category"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:text="@{reminder.category + &quot;,&quot;}"
                        android:enabled="@{!reminder.complete}"
                        tools:text="Sunnah," />

                    <TextView
                        android:id="@+id/reminder_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:text="@{TimeDateUtil.formatTimeInMilliseconds(context, reminder.timeInMilliseconds) }"
                        android:enabled="@{!reminder.complete}"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        tools:text="14:25" />

                    <ImageView
                        android:id="@+id/reminders_on"
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:layout_gravity="center_vertical"
                        android:visibility="@{reminder.enabled ? View.VISIBLE : View.GONE}"
                        android:layout_marginEnd="@dimen/margin_dimen"
                        tools:visibility="visible"
                        android:src="@drawable/ic_notifications_on"
                        android:contentDescription="@string/reminder_on" />

                    <ImageView
                        android:id="@+id/reminders_off"
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:layout_gravity="center_vertical"
                        android:visibility="@{TimeDateUtil.isReminderDisabled(context, reminder) ? View.VISIBLE : View.GONE}"
                        tools:visibility="visible"
                        android:src="@drawable/ic_notifications_off"
                        android:layout_marginEnd="@dimen/margin_dimen"
                        android:contentDescription="@string/reminder_off" />

                    <ImageView
                        android:id="@+id/repeat"
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:layout_gravity="center_vertical"
                        android:visibility="@{reminder.frequency.ordinal() > 0 ? View.VISIBLE : View.GONE}"
                        tools:visibility="visible"
                        android:src="@drawable/ic_repeat"
                        android:contentDescription="@string/repeating_reminder" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</layout>


